--- a/app/src/main/res/layout/row_house.xml
+++ b/app/src/main/res/layout/row_house.xml
@@ -1,6 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="64dp"
+    tools:ignore="RtlHardcoded">
+
+    <ImageView
+        android:id="@+id/image_view_thumbnail"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_launcher_foreground" />
+
+    <TextView
+        android:id="@+id/text_view_title"
+        android:layout_width="0dp"
+        android:layout_height="23dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="12dp"
+        android:ellipsize="end"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/image_view_thumbnail"
+        app:layout_constraintRight_toLeftOf="@+id/text_view_date"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="abcabcabcabcabasdfsadfsadfcabcabcab" />
+
+    <TextView
+        android:id="@+id/text_view_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:maxLines="1"
+        android:textSize="12dp"
+        app:layout_constraintBaseline_toBaselineOf="@id/text_view_title"
+        app:layout_constraintLeft_toRightOf="@id/text_view_title"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:text="2018년 9월 30일" />
+
+    <TextView
+        android:id="@+id/text_view_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:ellipsize="end"
+        android:layout_marginTop="8dp"
+        android:maxLines="1"
+        android:textSize="12dp"
+        app:layout_constraintLeft_toRightOf="@id/image_view_thumbnail"
+        app:layout_constraintTop_toBottomOf="@id/text_view_title"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="LookingForaRoom" />
+
+
 </android.support.constraint.ConstraintLayout>
