--- a/app/src/main/res/layout/row_house.xml
+++ b/app/src/main/res/layout/row_house.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="64dp"
+    android:background="?attr/selectableItemBackground"
     tools:ignore="RtlHardcoded">
 
     <ImageView
         android:id="@+id/image_view_thumbnail"
         android:layout_width="56dp"
         android:layout_height="56dp"
+        android:layout_marginLeft="8dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="23dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="1"
@@ -49,15 +51,16 @@
         android:id="@+id/text_view_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp"
         android:ellipsize="end"
-        android:layout_marginTop="8dp"
         android:maxLines="1"
         android:textSize="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/image_view_thumbnail"
         app:layout_constraintTop_toBottomOf="@id/text_view_title"
-        app:layout_constraintBottom_toBottomOf="parent"
         tools:text="LookingForaRoom" />
 
 
