--- a/app/src/main/res/layout/row_house.xml
+++ b/app/src/main/res/layout/row_house.xml
@@ -13,6 +13,7 @@
         android:layout_height="56dp"
         android:layout_marginLeft="8dp"
         android:scaleType="centerCrop"
+        android:transitionName="logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
