--- a/app/src/main/res/layout/activity_detail_house.xml
+++ b/app/src/main/res/layout/activity_detail_house.xml
@@ -56,6 +56,7 @@
             android:layout_margin="8dp"
             android:textColor="@color/black"
             android:textSize="14dp"
+            android:textIsSelectable="true"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_view_title"
