--- a/app/src/main/res/layout/activity_detail_house.xml
+++ b/app/src/main/res/layout/activity_detail_house.xml
@@ -49,17 +49,28 @@
             app:layout_constraintTop_toBottomOf="@id/image_view_thumbnail"
             tools:text="Lasalle 라쌀 큰 방 3개 2층 집 렌트합니다. $1,000 10월 1일 입주." />
 
+        <ProgressBar
+            android:id="@+id/progress_bar_loading"
+            style="@android:style/Widget.Material.ProgressBar.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_title" />
+
         <TextView
             android:id="@+id/text_view_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:textColor="@color/black"
-            android:textSize="14dp"
             android:textIsSelectable="true"
+            android:textSize="14dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_view_title"
+            app:layout_constraintTop_toBottomOf="@id/progress_bar_loading"
             tools:text="Lasalle 라쌀 큰 방 3개 2층 집 렌트합니다. $1,000 10월 1일 입주. LASSALLE 라살 지역 RUE SIMONNE 길 듀플렉스 랜트 구합니다." />
 
         <LinearLayout
