--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_bottom_detail_image">12dp</dimen>
+    <dimen name="app_bar_height">360dp</dimen>
+    <dimen name="article_keylines">72dp</dimen>
+    <dimen name="md_keylines">16dp</dimen>
 </resources>
