설정화면 및 웹뷰 추가
option 메뉴에서 시작, 종료, 진행중 확인 메뉴 추가함.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/go_setting"
+        android:title="@string/go_setting" >
+    </item>
     <item android:id="@+id/start_crawler"
         android:title="@string/start_crawler" >
+    </item>
+    <item android:id="@+id/stop_crawler"
+        android:title="@string/stop_crawler" >
     </item>
 </menu>
