--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="delete_all_from_table" type="id" />
+    <item name="check_alarm_manager" type="id" />
 </resources>
