--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -68,7 +68,7 @@
     <TextView
         android:id="@+id/text_view_time"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:gravity="center"
         android:text="@string/time_duration_formatter"
         app:layout_constraintBaseline_toBaselineOf="@id/text_view_timer_title"
