--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_height="56dp"
         android:layout_marginBottom="12dp"
         android:layout_marginRight="12dp"
-        android:src="@drawable/ic_refresh"
+        android:src="@drawable/ic_refresh_white_40dp"
         app:layout_constraintBottom_toBottomOf="@id/recyclerview"
         app:layout_constraintRight_toRightOf="@id/recyclerview" />
 </android.support.constraint.ConstraintLayout>
