--- a/app/src/main/res/layout/activity_detail_house.xml
+++ b/app/src/main/res/layout/activity_detail_house.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".detail.DetailHouseActivity"
+    tools:context=".detail.DetailItemActivity"
     tools:ignore="SpUsage">
 
     <com.google.android.material.appbar.AppBarLayout
