add tablayout and viewpager2
to show 3 fragments.
fix an error to go webactivity.
rename some resources.
add colors for texts.

--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -51,7 +51,7 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <ProgressBar
-        android:id="@+id/progress_bar_loading"
+        android:id="@+id/progressBarLoading"
         style="@android:style/Widget.Material.ProgressBar.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
