--- a/app/src/main/res/layout/activity_detail_item.xml
+++ b/app/src/main/res/layout/activity_detail_item.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".detail.DetailItemActivity"
+    tools:context=".detail.HouseDetailActivity"
     tools:ignore="SpUsage">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -86,7 +86,7 @@
                 tools:text="Lasalle 라쌀 큰 방 3개 2층 집 렌트합니다. $1,000 10월 1일 입주. LASSALLE 라살 지역 RUE SIMONNE 길 듀플렉스 랜트 구합니다." />
 
             <ProgressBar
-                android:id="@+id/progress_bar_loading"
+                android:id="@+id/progressBarLoading"
                 style="@android:style/Widget.Material.ProgressBar.Large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
